--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.13.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.7.0",
+    "sweetalert2": "^11.26.18",
     "swiper": "^12.1.0",
     "tailwindcss": "^4.1.18"
   },
