added analytics and updated scholarship page

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ VITE_projectId=scholarstream-e6c33
 VITE_storageBucket=scholarstream-e6c33.firebasestorage.app
 VITE_messagingSenderId=777953880577
 VITE_appId=1:777953880577:web:e0db5432b8a238b0d86e00
-VITE_image_host_key=651306ea3bf0cf933916a797acb130d1 
+VITE_image_host_key=651306ea3bf0cf933916a797acb130d1
+VITE_SERVER_URL=http://localhost:3000
